# ai-useage-tool

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docs/superpowers/plans/: 2026-06-01-codex-usage-dashboard.md
docs/superpowers/specs/: 2026-06-01-codex-usage-dashboard-design.md
scripts/: dev.mjs  prepare-sidecar.mjs
server/: collector.mjs  config.mjs  db.mjs  index.mjs  parser.mjs  project.mjs
src/: App.jsx  MenubarApp.jsx  api.js  format.js  main.jsx  sessionView.js  styles.css  tauriBridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Gauge.jsx  MetricCard.jsx  ProjectDistribution.jsx  RangeTabs.jsx  SessionRail.jsx
test/: format.test.mjs  parser.test.mjs  sessionView.test.mjs
