[package]
name = "codex-usage-monitor"
version = "0.1.0"
description = "A local Codex usage monitor with a macOS menu bar surface."
authors = ["aladdin"]
edition = "2021"

[lib]
name = "codex_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
